# riscv-etrace

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  memory.x  opcodes.ods  packets.ods
.cargo/: config
decoder/: Cargo.toml
decoder/src/: decoder.rs  disassembler.rs  lib.rs  segment.rs  tracer.rs
decoder/src/decoder/: format.rs  header.rs  parts.rs  payload.rs
doc/: development.md  test-reference.mk  test-reference.sh
examples/: encoder.rs  params.toml  simple.rs
examples/spike/: mod.rs
src/: binary.rs  config.rs  decoder.rs  disassembler.rs  generator.rs  instruction.rs  lib.rs  packet.rs  tests.rs  tracer.rs  types.rs
src/binary/: basic.rs  boxed.rs  combinators.rs  elf.rs  error.rs  testfile.elf  tests.rs
src/config/: serde_utils.rs
src/decoder/: branch.rs  encap.rs  error.rs  format.rs  header.rs  payload.rs  smi.rs  sync.rs  tests.rs  truncate.rs  unit.rs  util.rs
src/generator/: error.rs  hart2enc.rs  state.rs  step.rs
src/instruction/: base.rs  binary.rs  bits.rs  decode.rs  elf.rs  format.rs  info.rs  tests.rs
src/instruction/tests/: compare.rs  decode.rs  decode_tests.rs  extract.rs  fmt.rs  insn_fmt.rs
src/packet/: decoder.rs  encap.rs  encoder.rs  error.rs  esp32.rs  ext.rs  payload.rs  smi.rs  sync.rs  tests.rs  truncate.rs  unit.rs  util.rs  width.rs
src/packet/tests/: basic.rs  encap_tests.rs  gen.rs  parts.rs  test_gen.rs
src/tests/: chapter12.rs  gen.rs  jumps.rs  section762.rs  test_gen.rs  traps.rs
src/tracer/: cache.rs  disassembler.rs  error.rs  item.rs  stack.rs  state.rs  tests.rs
src/tracer/tests/: chapter12.rs  gen.rs  jumps.rs  section762.rs
src/types/: branch.rs  stack.rs  tests.rs  trap.rs
