[package]
name = "riscv-etrace"
description = "Decoder and tracer for RISC-V efficient instruction tracing"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
keywords = ["riscv", "tracing"]
categories = ["no-std", "parser-implementations"]

[dependencies]
elf = { version = "0.7", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
toml = { version = "0.8", features = ["parse"], default-features = false }

[[example]]
name = "simple"
required-features = ["elf", "serde"]
