[package]
name = "riscv-etrace"
description = "Decoder and tracer for RISC-V efficient instruction tracing"
license = "Apache-2.0"
version = "0.6.2"
edition = "2021"
keywords = ["riscv", "tracing"]
categories = ["no-std", "parser-implementations"]
repository = "https://github.com/fzi-forschungszentrum-informatik/riscv-etrace"

[features]
alloc = []

[dependencies]
elf = { version = "0.8", optional = true }
riscv-isa = { version = "0.3", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
clap = { version = "4.5", features = ["env"] }
toml = { version = "0.9", features = ["parse", "serde"], default-features = false }

[[example]]
name = "simple"
required-features = ["alloc", "elf", "serde"]

[[example]]
name = "encoder"
required-features = ["serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
